# yml-feed-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  django_app.py  feed_task.py  pyproject.toml
tests/: __init__.py
tests/unit/: test_build_yml.py
